Simplified a bit of code using rich iterators